[B]Updated 12/16/2011:[/B]
Official Release for Eden

[B]Updated 10/25/2011:[/B]
v1.8.5
- Fixed volume control for Eden
- Adjusted skin reset behaviour 
- Began update of TV Guide

[B]Updated 06/29/2011:[/B]
v1.8.0 
- Updated International font positioning across entire skin
- Fixed poster/banner issue in TV Guide
- New video nav/settings slide out - wip - still need to add to audio


[B]Updated 05/05/2011:[/B]
v1.7.0 - Initial Support for Pre-Eden builds
- Updated / New Recenlty added for TV
- New Wall View
- New Color studio icons


[B]Updated 05/01/2011:[/B]
v1.6.2 - First update to xmbc repository
Major New features for Repo version:

- Added support for QWERTY virtual keyboard
- All new info screen for tv shows
- Changed Shutdown menu to vertical orientation
- Support for Weather.com Plus
- Download all extra tv artwork via the skin
- Updated Video Info while playing videos
- Added support for music Smart Playlist at start up
- Initial support for Live TV/PVR branch
- Lots of minor bug fixes

[B]Updated 04/16/2011:[/B]
v1.5.0
Preliminary Live TV/PVR Support
Reworked TV/Movie Info screens
Tweaks to Home Screen positioning - couldn't take it not being centered just right. :)
Added Startup Playlist in Partymode to enable fanart



[B]Updated 03/24/2011:[/B]
v1.0.2
Bug Fixes
- Fixed Chapter names
- Changed Playlist behaviour
- VC-1 Codec image
- Now playing windows adjusted
- TV Guide fixes

[B]Updated 03/24/2011:[/B]
v1.0.1
Minor XML cleanup
Add 3d Landscape support

[B]Updated 03/22/2011:[/B]
v1.0.0
- Version 1.0 release
- Updated Music Info Views
- Added TV Guide from Simplicity - thanks to igotdvd's!

[B]Updated 03/06/2011:[/B]
v.9.5.5
- Added support for Weather.com Plus addon - Thanks to Jezz_x and Confluence
- Standardized menu selection bar
- Added full screen video and visualization on home screen.  Configurable in Settings
- Can now select "Bottom Line" rss logo in settings
- Adjusted now playing window position on home screen