@@ -1,3 +1,7 @@
+[B]Updated 01/03/2012:[/B]
+Fixed Cinema Experience script
+Changed "Files" behaviour in Movie and TV submenu to match Videos
+
 [B]Updated 12/16/2011:[/B]
 Official Release for Eden
 
